--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -43,3 +43,11 @@ figure {
        width: auto; 
     }
 }
+
+// code {
+//     line-height: 1.1;
+// }
+
+div.highlighter-rouge, figure.highlight {
+    line-height: 1.1;
+}
